--- a/docs/assets/css/reset.css
+++ b/docs/assets/css/reset.css
@@ -31,6 +31,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+  background: var(--color-sky-deepest, #070B1F);
 }
 
 img, picture, video, canvas, svg {
